--- a/backend/package.json
+++ b/backend/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.2.4",
     "nodemon": "^3.1.0"
   }
 }
