--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "@vue/cli-service": "~5.0.0",
     "typescript": "~4.7",
     "vue-cli-plugin-vuetify": "^2.5.8",
+    "webfontloader": "^1.6.28",
     "webpack-plugin-vuetify": "^2.0.0-alpha.0"
   },
   "browserslist": [
