--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
     "roboto-fontface": "*",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
-    "vuetify": "^3.5.11"
+    "vue3-carousel": "^0.3.3",
+    "vuetify": "^3.5.11",
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
     "@types/webfontloader": "^1.0.0",
