--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "ws": "^8.16.0"
   }
 }
