--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/node": "^20.12.8",
     "@types/webfontloader": "^1.0.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
