--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,11 +8,13 @@
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
+    "axios": "^1.6.8",
     "core-js": "^3.8.3",
     "pinia": "^2.1.7",
     "roboto-fontface": "*",
     "vee-validate": "^4.12.6",
     "vue": "^3.2.13",
+    "vue-native-websocket-vue3": "^3.1.7",
     "vue-router": "^4.0.3",
     "vue3-carousel": "^0.3.3",
     "vuetify": "^3.5.11",
